# FSWinf-Beratung-LLM

./: .copilotignore  .env.example  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  draft_tracker.sqlite  example_usage.py  main.py  pyproject.toml
freescout_llm/: __init__.py  __main__.py  config.py  conversation_processor.py  database_utils.py  draft_tracker.py  freescout_api.py  llm_providers.py  main.py  rag_pipeline.py  server.py  text_processing.py  vector_db.py
freescout_llm/database/: __init__.py  document_loaders.py  document_processors.py  vector_db_manager.py
freescout_llm/scrape/: __init__.py  base.py  cli.py  freescout.py  migrate.py  scrapy_scrapers.py  tiss.py
freescout_llm/tools/: __init__.py  email_search.py  knowledge_search.py  url_summarization.py
tests/: test_draft_tracker.py  test_rag_pipeline.py  test_text_processing.py  test_vector_db.py
